@@ -33,6 +33,7 @@
 === Miscellaneous ===
 
 === Bug fixes ===
+ * #1052 (The Dirichlet and Normal distributions only have 1D graphics in the doc)
  * #1431 (The figure for LHSExperiment is not accurate)
  * #1459 (There is no example which shows how to set a column of a Sample)
  * #1497 (There is no example to create a multivariate Normal distribution)
